<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="buscar">Buscar</string>
    <string name="actualizar">Actualizar</string>
    <string name="descargar_datos">Descargar datos</string>
    <string name="lista_vacia">Lista vacia</string>
    <string name="busqueda_fecha">Buscar por fecha</string>
    <string name="busqueda_mes">Buscar por mes</string>
    <string name="busqueda_placa">Buscar por placa</string>
    <string name="editar_carriles">Config. carril</string>
    <string name="filtrar">Filtrar</string>
    
    <string name="app_name">Parqueo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="parking">Parking</string>
    <string name="nombre_parqueo">Nombre parqueo </string>
    <string name="telf">Telefono</string>
    <string name="precio_dia">Precio por hora de dia Bs.</string>
    <string name="precio_noche">Precio parqueo noche Bs.</string>
    <string name="tiempo_espera">Tiempo de espera Min.</string>
    <string name="capacidad">Cantidad carriles</string>
    
    <string name="ci">Carnet Ident.</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellidos</string>
    <string name="usuario">Usuario</string>
    <string name="clave">Clave</string>
    <string name="repetir">Repetir clave</string>
    <string name="telf_celular">Telf. o celular</string>
    <string name="direccion">Dirección</string>
    <string name="email">E-mail</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="sexo">Sexo</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="finalizar">Finalizar</string>
    <string name="fecha_contrato">Fecha de contrato</string>
    <string name="listo">Listo</string>
    <string name="continuar">Continuar</string>
    <string name="imagen_cliente">Imagen o foto del cliente</string>
    <string name="imagen_usuario">Imagen o foto del usuario</string>
    <string name="imagen_calendario">Imagen del calendario</string>
    <string name="imagen_parqueo">Imagen del parqueo</string>
    <string name="no_especificado">No especificado</string>
    
    <string name="placa">Placa</string>
    <string name="marca">Marca</string>
    <string name="color">Color</string>
    <string name="imagen_vehiculo">Imagen vehiculo</string>
    <string name="ci_propietario">CI propietario</string>
    
    <string name="tipo_cliente">Tipo de cliente</string>
    <string name="hora_entrada">Hora</string>
    <string name="fecha_entrada">Fecha de entrada</string>
    
    <string-array name="resguardos_por_fechas">
        <item>Ultimos registros</item>
        <item>Hace 3 dias</item>
        <item>Hace 1 Semana</item>
        <item>Del mes actual</item>
    </string-array>
    
    <string name="clientes_todos">Todos</string>
    <string name="clientes_ocasionales">Ocasionales</string>
    <string name="clientes_contrato_nocturno">Con contrato nocturno</string>
    <string name="clientes_contrato_diurno">Con contrato diurno</string>
    <string name="clientes_contrato_dia_completo">Con contrato dia completo</string>

</resources>
