<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item 
        android:id="@+id/action_search"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_search_white_48dp"
        android:title="@string/buscar"
        android:actionViewClass="android.widget.SearchView"/>
    
    <item 
        android:id="@+id/action_refresh"
        android:orderInCategory="3"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_reload_list"
        android:title="@string/actualizar"
        android:visible="false"/>
    
    <item 
        android:id="@+id/action_download"
        android:orderInCategory="4"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_update_data"
        android:title="@string/descargar_datos"
        android:visible="false"/>
    
    <item 
        android:id="@+id/action_search_date"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/busqueda_fecha"/>
    
    <item 
        android:id="@+id/action_search_month"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/busqueda_mes"/>
    
    
    
    <item 
        android:id="@+id/action_search_placa"
        android:orderInCategory="7"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/busqueda_placa"/>
    <item 
        android:id="@+id/action_cli_todos"
        android:orderInCategory="8"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/clientes_todos"/>
    
    <item 
        android:id="@+id/action_cli_ocasionales"
        android:orderInCategory="9"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/clientes_ocasionales"/>
    
    <item 
        android:id="@+id/action_cli_nocturno"
        android:orderInCategory="10"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/clientes_contrato_nocturno"/>
    
    <item 
        android:id="@+id/action_cli_diurno"
        android:orderInCategory="11"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/clientes_contrato_diurno"/>
    
    <item 
        android:id="@+id/action_cli_dia_completo"
        android:orderInCategory="12"
        android:showAsAction="never"
        android:visible="false"
        android:title="@string/clientes_contrato_dia_completo"/>
    
    <item 
        android:id="@+id/action_edit_carriles"
        android:orderInCategory="13"
        android:showAsAction="ifRoom|withText"
        android:icon="@drawable/ic_config_carril"
        android:visible="false"
        android:title="@string/editar_carriles"/>
    
    <item 
        android:id="@+id/action_filter_vehiculo"
        android:orderInCategory="14"
        android:showAsAction="ifRoom|withText"
        android:visible="false"
        android:icon="@drawable/ic_filter_white"
        android:title="@string/filtrar"/>
</menu>
