<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

 		<ImageView
            android:id="@+id/ivImageUsuario"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:contentDescription="@string/imagen_usuario"
            android:src="@drawable/ic_supervisor_account_white_48dp"
            android:background="@drawable/custom_imageview_white" />

 		<LinearLayout 
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:orientation="horizontal"
 		    android:gravity="center_vertical|center_horizontal">
 		    
 		    <ProgressBar
                android:id="@+id/pbVericarCIUsuario"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_imageview_white"
                android:visibility="gone"/>
 		    <EditText
	            android:id="@+id/etCIUsuario"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/ci"
	            android:inputType="number"
	            android:maxLength="8" 
	            android:layout_margin="1dp"
	            android:drawableRight="@drawable/ic_no_value_24">
	
	            <requestFocus />
	        </EditText>
 		</LinearLayout>
        
        <EditText
            android:id="@+id/etNombreUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="textCapWords"
            android:maxLength="15" 
            android:layout_margin="1dp"/> 

        <EditText
            android:id="@+id/etApellidoUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/apellido"
            android:inputType="textCapWords"
            android:maxLength="20"
            android:layout_margin="1dp"
            android:visibility="gone"/>

        <LinearLayout 
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:orientation="horizontal"
 		    android:layout_margin="1dp"
 		    android:gravity="center_vertical|center_horizontal">
 		    
 		    <ProgressBar
                android:id="@+id/pbVericarNombreUsuario"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" 
                android:background="@drawable/custom_imageview_white"
                android:visibility="gone"/>
 		    <EditText
	            android:id="@+id/etUserUsuario"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/usuario"
	            android:inputType="textPersonName"
	            android:maxLength="10"
	            android:digits="_.-@qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789"
	            android:drawableRight="@drawable/ic_no_value_24" />
 		</LinearLayout>
        

        <EditText
            android:id="@+id/etClaveUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/clave"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="_.-@#$%qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789"
            android:layout_margin="1dp"/>

        <EditText
            android:id="@+id/etClaveRepetirUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repetir"
            android:inputType="textPassword"
            android:maxLength="12"
            android:digits="_.-@#$%qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789"
            android:layout_margin="1dp"/>

        <EditText
            android:id="@+id/etCelularUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telf_celular"
            android:inputType="number"
            android:maxLength="8"
            android:layout_margin="1dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etDireccionUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/direccion"
            android:inputType="textCapSentences"
            android:maxLength="30"
            android:layout_margin="1dp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/etEmailUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:layout_margin="1dp"
            android:digits="_.-@,qwertzuiopasdfghjklyxcvbnm,QWERTYUIOPASDFGHJKLZXCVBNM,0123456789"
            android:visibility="gone" />
		
        <LinearLayout 
            android:id="@+id/lyVistaFechaNacUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp"
            android:visibility="gone" >
 		    
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nac"
                android:textSize="11dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
            <LinearLayout
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:gravity="center_horizontal|center_vertical"
	            android:orientation="horizontal">
	
	            <TextView
	                android:id="@+id/tvFechaNacUsuario"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/fecha_nac" 
	                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" 
		            android:typeface="monospace"/>
	
	            <ImageButton
	                android:id="@+id/ibtnCalendarioUsuario"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="3dp"
	                android:src="@drawable/ic_today_black_36dp" 
	                android:background="@android:color/transparent"
	                android:contentDescription="@string/imagen_calendario"/>
	        </LinearLayout>
        
        </LinearLayout>
        
        <LinearLayout
            android:id="@+id/lyVistaSexoUsuario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp"
	        android:visibility="gone" >
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="11dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
            <RadioGroup
	            android:id="@+id/rdgSexoUsuario"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal">
	
	            <RadioButton
	                android:id="@+id/rdbMasculinoUsuario"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/masculino" />
	
	            <RadioButton
	                android:id="@+id/rdbFemeninoUsuario"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/femenino" />
	        </RadioGroup>
        </LinearLayout>

        <Button
            android:id="@+id/btnGuardarUsuario"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/finalizar"
            android:layout_marginTop="20dp" 
            style="?android:attr/buttonStyleSmall"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_imageview"/>
    </LinearLayout>

</ScrollView>
