<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:padding="10dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" 
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/ivImageCliente"
                android:layout_width="90dp"
                android:layout_height="90dp"
            	android:scaleType="fitCenter"
                android:src="@drawable/ic_timer_auto_white_48dp" 
                android:contentDescription="@string/imagen_cliente"
                android:background="@drawable/custom_imageview_white"/>
   
            <LinearLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="1dp">
                
                <LinearLayout 
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">
                    
                    <ProgressBar
                        android:id="@+id/pbVericarCICliente"
                        style="?android:attr/progressBarStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/custom_imageview_white"
                        android:visibility="gone"/>
                    
                    <EditText
		                android:id="@+id/etCICliente"
		                android:layout_width="fill_parent"
		                android:layout_height="wrap_content"
		                android:hint="@string/ci"
		                android:inputType="number" 
		                android:maxLength="8"
		                android:drawableRight="@drawable/ic_no_value_24">
		                <requestFocus />
		            </EditText>

                </LinearLayout>
                
                <EditText
		            android:id="@+id/etNombreCliente"
		            android:layout_width="fill_parent"
		            android:layout_height="wrap_content"
		            android:hint="@string/nombre"
		            android:inputType="textCapWords" 
		            android:maxLength="15"
		            android:layout_margin="1dp"/>
            </LinearLayout>
        </LinearLayout>

	        <EditText
	            android:id="@+id/etApellidoCliente"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:inputType="textCapWords"
	            android:hint="@string/apellido" 
	            android:maxLength="20"
	            android:layout_marginTop="1dp"/>
	
	        <EditText
	            android:id="@+id/etCelularCliente"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/telf_celular"
	            android:inputType="phone" 
	            android:maxLength="8"
	            android:layout_margin="1dp"/>
	
	        <EditText
	            android:id="@+id/etDireccionCliente"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/direccion" 
	            android:inputType="textCapSentences"
	            android:maxLength="30"
	            android:layout_margin="1dp"/>
	
	        <EditText
	            android:id="@+id/etEmailCliente"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:hint="@string/email" 
	            android:inputType="textEmailAddress" 
	            android:maxLength="30"
	            android:digits="_.-@qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM0123456789"
	            android:layout_margin="1dp"/>
        
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textSize="11dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
            <RadioGroup 
	            android:id="@+id/rdgSexoCliente"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:orientation="horizontal">
	            
	            <RadioButton
		            android:id="@+id/rdbMasculinoCliente"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/masculino" />
	            
	            <RadioButton
		            android:id="@+id/rdbFemeninoCliente"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/femenino" />
	            
	        </RadioGroup>
        </LinearLayout>
         
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_nac"
                android:textSize="11dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
            <LinearLayout 
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:orientation="horizontal"
	            android:gravity="center_horizontal|center_vertical">
	            
	            <TextView 
		            android:id="@+id/tvFechaNacCliente"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/no_especificado"
		            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" 
		            android:typeface="monospace"/>
	
	            <ImageButton
	                android:id="@+id/ibtnCalendarioFechaNacCliente"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_marginLeft="3dp"
	                android:src="@drawable/ic_today_black_36dp" 
	                android:background="@android:color/transparent"
	                android:contentDescription="@string/imagen_calendario"/>
	        </LinearLayout>
        
        </LinearLayout>

        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="1dp">
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Definir tipo de cliente"
                android:textSize="12dp"
                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
            
            <Spinner
	            android:id="@+id/spinnerTipoCliente"
	            android:layout_width="wrap_content"
	            android:layout_height="35dp"
	            android:layout_gravity="center_horizontal"
	            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu"/>
            
         	<LinearLayout 
         	    android:id="@+id/lyFechaContratoCliente"
         	    android:layout_width="match_parent"
         	    android:layout_height="wrap_content"
         	    android:orientation="vertical"
         	    android:visibility="gone">
                
         	    <TextView 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Fecha de contrato"
	                android:textSize="11dp"
	                android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" />
         	    
         	    <LinearLayout 
         	        android:layout_width="match_parent"
         	        android:layout_height="wrap_content"
         	        android:orientation="horizontal"
         	        android:gravity="center_horizontal|center_vertical">
         	        
         	        <TextView 
			            android:id="@+id/tvFechaContratoCliente"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:ems="10"
			            android:text="@string/fecha_contrato"
			            android:textAppearance="?android:attr/textAppearanceSmallPopupMenu" 
			            android:typeface="monospace"/>
		
		            <ImageButton
		                android:id="@+id/ibtnCalendarioFechaContratoCliente"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_marginLeft="3dp"
		                android:src="@drawable/ic_today_black_36dp" 
		                android:background="@android:color/transparent"
		                android:contentDescription="@string/imagen_calendario"/>
         	        
         	    </LinearLayout>
         	    
         	</LinearLayout>            
            
        </LinearLayout>

		<Button
            android:id="@+id/btnListoCliente"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/listo" 
            android:layout_marginTop="10dp"
            style="?android:attr/buttonStyleSmall"
            android:textColor="@android:color/white"
            android:background="@drawable/custom_imageview"/>
            
    </LinearLayout>
    
</ScrollView>
